# data_a3

./: .gitignore  CMakeLists.txt  Makefile  README.md  database.cpp  database.h  loadCSV.cpp  loadCSV.h  main.cpp
include/: IOfunctions.h  NaiveBayes.h  apriori.h  database.h  frequentSet.h  id3.h  loadCSV.h  rule.h
src/: IOfunctions.cpp  NaiveBayes.cpp  apriori.cpp  database.cpp  frequentSet.cpp  id3.cpp  loadCSV.cpp  main.cpp  rule.cpp
